# bevy_shadertoy

./: Cargo.toml
assets/: uv.frag
examples/: main.rs
src/: fullscreen_triangle.wgsl  lib.rs  node.rs  pipeline.rs  shadertoy_bindings.rs
src/shader/: shadertoy_bindings.frag  shadertoy_main.frag
