[package]
name = "bevy_shadertoy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.6", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_winit", "x11"] }
naga = { version = "0.8.1", default-features = false }

# [dev-dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_winit", "x11"] }
